# gity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/gity/: Cargo.toml  README.md
crates/gity-cli/: Cargo.toml  README.md
crates/gity-cli/src/: lib.rs
crates/gity-daemon/: Cargo.toml  README.md
crates/gity-daemon/src/: events.rs  fsmonitor_cache.rs  lib.rs  logging.rs  logs.rs  metrics.rs
crates/gity-git/: Cargo.toml  README.md
crates/gity-git/src/: lib.rs
crates/gity-ipc/: Cargo.toml  README.md
crates/gity-ipc/src/: bincode_serde.rs  lib.rs  validated_path.rs
crates/gity-storage/: Cargo.toml  README.md
crates/gity-storage/src/: lib.rs
crates/gity-tray/: Cargo.toml  README.md
crates/gity-tray/src/: lib.rs
crates/gity-watch/: Cargo.toml  README.md
crates/gity-watch/src/: lib.rs
crates/gity/src/: daemon_launcher.rs  main.rs  paths.rs  status_cache.rs
crates/gity/tests/: integration_test.rs
crates/gitz/: Cargo.toml
crates/gitz-cli/: Cargo.toml
crates/gitz-cli/src/: lib.rs
crates/gitz-daemon/: Cargo.toml
crates/gitz-daemon/src/: events.rs  lib.rs  logs.rs  metrics.rs
crates/gitz-git/: Cargo.toml
crates/gitz-git/src/: lib.rs
crates/gitz-ipc/: Cargo.toml
crates/gitz-ipc/src/: lib.rs
crates/gitz-storage/: Cargo.toml
crates/gitz-storage/src/: lib.rs
crates/gitz-tray/: Cargo.toml
crates/gitz-tray/src/: lib.rs
crates/gitz-watch/: Cargo.toml
crates/gitz-watch/src/: lib.rs
crates/gitz/src/: daemon_launcher.rs  main.rs  paths.rs  status_cache.rs
crates/gitz/tests/: integration_test.rs
demo/: Cargo.toml  run-demo.sh
demo/src/: main.rs  phases.rs  tui.rs
docs/: alternatives.md  architecture.md  commands.md  demo.md  fsmonitor.md  process.md  release-requirements.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/concepts/: architecture.md  fsmonitor.md  how-it-works.md
documentation/docs/getting-started/: demo.md  installation.md  quick-start.md
documentation/docs/platform-guides/: linux.md  macos.md  windows.md  wsl2.md
documentation/docs/reference/: cli-reference.md  environment-variables.md
documentation/docs/user-guide/: commands.md  configuration.md  registering-repos.md  troubleshooting.md
packaging/: build.sh
packaging/debian/: control
packaging/macos/: Info.plist
packaging/windows/: gity.wxs  gitz.wxs
