[package]
name = "gity-cli"
version = "0.1.0"
edition = "2021"
authors = ["Dipankar Sarkar <me@dipankar.name>", "Neul Labs <https://neul.uk>"]
description = "CLI interface for gity - Git repository acceleration daemon"
documentation = "https://docs.rs/gity-cli"
homepage = "https://github.com/neul-labs/gity"
repository = "https://github.com/neul-labs/gity"
license = "MIT"
keywords = ["git", "cli", "daemon", "command-line", "developer-tools"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
gity-ipc = { version = "0.1.0", path = "../gity-ipc" }
thiserror = "1.0"

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1.37", features = ["macros", "rt"] }
