[package]
name = "gity-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Neul Labs"]
description = "Background daemon for gity - handles file watching, caching, and Git maintenance"
documentation = "https://docs.rs/gity-daemon"
homepage = "https://github.com/neul-labs/gity"
repository = "https://github.com/neul-labs/gity"
license = "MIT"
keywords = ["git", "daemon", "fsmonitor", "watcher"]
categories = ["development-tools", "filesystem"]

[dependencies]
async-nng = "0.2"
async-trait = "0.1"
gity-ipc = { version = "0.1.0", path = "../gity-ipc" }
gity-git = { version = "0.1.0", path = "../gity-git" }
gity-storage = { version = "0.1.0", path = "../gity-storage" }
gity-watch = { version = "0.1.0", path = "../gity-watch" }
nng = "1.0"
tokio = { version = "1.37", features = ["macros", "process", "rt", "signal", "sync", "time"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sysinfo = "0.30"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
tempfile = "3.12"
