[package]
name = "gity-git"
version = "0.1.2"
edition = "2021"
authors = ["Dipankar Sarkar <me@dipankar.name>", "Neul Labs <https://neul.uk>"]
description = "Git operations library for gity"
readme = "README.md"
documentation = "https://docs.rs/gity-git"
homepage = "https://github.com/neul-labs/gity"
repository = "https://github.com/neul-labs/gity"
license = "MIT"
keywords = ["git", "libgit2", "git-library", "version-control", "git-operations"]
categories = ["development-tools"]

[dependencies]
git2 = { version = "0.19", features = ["vendored-libgit2"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.12"
