[package]
name = "gity-ipc"
version = "0.1.0"
edition = "2021"
authors = ["Dipankar Sarkar <me@dipankar.name>", "Neul Labs <https://neul.uk>"]
description = "IPC protocol and message types for gity daemon communication"
documentation = "https://docs.rs/gity-ipc"
homepage = "https://github.com/neul-labs/gity"
repository = "https://github.com/neul-labs/gity"
license = "MIT"
keywords = ["ipc", "protocol", "messaging", "inter-process", "async-communication", "serialization"]
categories = ["development-tools"]

[dependencies]
async-trait = "0.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
