[package]
name = "gity-storage"
version = "0.1.0"
edition = "2021"
authors = ["Dipankar Sarkar <me@dipankar.name>", "Neul Labs <https://neul.uk>"]
description = "Persistent storage layer for gity using sled"
documentation = "https://docs.rs/gity-storage"
homepage = "https://github.com/neul-labs/gity"
repository = "https://github.com/neul-labs/gity"
license = "MIT"
keywords = ["storage", "database", "sled", "embedded-database", "key-value", "persistent-storage"]
categories = ["database"]

[dependencies]
gity-ipc = { version = "0.1.0", path = "../gity-ipc" }
thiserror = "1.0"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
tempfile = "3.12"
