[package]
name = "gity"
version = "0.1.0"
edition = "2021"
authors = ["Dipankar Sarkar <me@dipankar.name>", "Neul Labs <https://neul.uk>"]
description = "Make large Git repositories feel instant - a lightweight daemon that accelerates Git operations"
documentation = "https://docs.rs/gity"
readme = "../../README.md"
homepage = "https://github.com/neul-labs/gity"
repository = "https://github.com/neul-labs/gity"
license = "MIT"
keywords = ["git", "git-automation", "git-performance", "fsmonitor", "version-control", "developer-tools", "cli", "daemon", "prefetch", "git-status"]
categories = ["command-line-utilities", "development-tools", "filesystem"]

[dependencies]
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
gity-cli = { version = "0.1.0", path = "../gity-cli" }
gity-daemon = { version = "0.1.0", path = "../gity-daemon" }
gity-ipc = { version = "0.1.0", path = "../gity-ipc" }
gity-storage = { version = "0.1.0", path = "../gity-storage" }
gity-tray = { version = "0.1.0", path = "../gity-tray", optional = true }
libc = { version = "0.2", optional = false }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
hex = "0.4"

[features]
default = []
tray = ["dep:gity-tray"]

[dev-dependencies]
tempfile = "3.12"
git2 = "0.19"
gity-git = { version = "0.1.0", path = "../gity-git" }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
