[package]
name = "gitz-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nng = "0.2"
async-trait = "0.1"
gitz-ipc = { path = "../gitz-ipc" }
gitz-git = { path = "../gitz-git" }
gitz-storage = { path = "../gitz-storage" }
gitz-watch = { path = "../gitz-watch" }
nng = "1.0"
tokio = { version = "1.37", features = ["macros", "process", "rt", "signal", "sync", "time"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sysinfo = "0.30"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
tempfile = "3.12"
