[package]
name = "gitz-tray"
version = "0.1.0"
edition = "2021"
description = "Cross-platform system tray for gitz"

[dependencies]
gitz-ipc = { path = "../gitz-ipc" }
gitz-daemon = { path = "../gitz-daemon" }

tray-icon = "0.19"
muda = "0.15"
image = "0.25"
tokio = { version = "1", features = ["rt", "sync", "macros"] }
thiserror = "1"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux uses GTK for the event loop
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
winit = "0.30"

[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.30"
